# template_python

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: CI.yml  ci.yml  linting.yml  tests.yml
docs/: requirements.txt  run-sphinx-api-doc
docs/source/: conf.py
