[metadata]
license_files = LICENSE

[bdist_wheel]
universal=0

[isort]
profile = black

[mypy]
python_version = 3.10
disallow_untyped_calls = False
disallow_untyped_defs = True
check_untyped_defs = True
exclude = tests/|venv/|dev/|fair_higgs/ingestion_program|fair_higgs/scoring_program
no_strict_optional = True
disable_error_code = attr-defined, override, union-attr

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[flake8]
ignore = E203, E266, E501, W503, E741, C901, W405, E402, E211, W291 F722
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9

[tool:pytest]
addopts = 
    -m 'not long'
